src/AnalyseurSyntaxique.java
// AnalyseurSyntaxique.java
import java.io.IOException;
import java.util.ArrayList;
import java.util.List;

public class AnalyseurSyntaxique {
    private analyseurLexical analyseur;
    private SymboleCourant tokenCourant;
    private NoeudAST arbreSyntaxique;
    private List<String> erreursSyntaxiques;

    public AnalyseurSyntaxique(analyseurLexical analyseur) {
        this.analyseur = analyseur;
        this.tokenCourant = analyseur.getSymboleCourant();
        this.arbreSyntaxique = new NoeudAST(NoeudAST.TypeNoeud.PROGRAMME);
        this.erreursSyntaxiques = new ArrayList<>();
    }

    public void analyser() throws IOException {
        programme();
        if (tokenCourant.code != TokenType.EOF_TOKEN) {
            erreurSyntaxique("Fin de fichier attendue");
        }
    }

    private void avancer() throws IOException {
        analyseur.symboleSuivant();
        tokenCourant = analyseur.getSymboleCourant();
    }

    private boolean consommer(TokenType typeAttendu) throws IOException {
        if (tokenCourant.code == typeAttendu) {
            avancer();
            return true;
        }
        return false;
    }

    private boolean verifier(TokenType type) {
        return tokenCourant.code == type;
    }

    private void erreurSyntaxique(String message) {
        String erreur = String.format("Erreur syntaxique ligne %d: %s (Token: '%s')",
                tokenCourant.ligne, message, tokenCourant.nom);
        erreursSyntaxiques.add(erreur);
        System.err.println(" ERREUR SYNTAXIQUE");
        System.err.println("   Ligne " + tokenCourant.ligne + ": " + message);
        System.err.println("   Token actuel: " + tokenCourant.nom);
    }

    // Règle: PROGRAMME ::= [DIRECTIVE_LANGAGE] ALGORITHME DECLARATIONS DEBUT INSTRUCTIONS FIN
    private void programme() throws IOException {
        // Directive de langage optionnelle
        if (verifier(TokenType.LANGAGE_TOKEN)) {
            NoeudAST directive = new NoeudAST(NoeudAST.TypeNoeud.DIRECTIVE_LANGAGE,
                    tokenCourant.nom, tokenCourant.ligne);
            arbreSyntaxique.ajouterEnfant(directive);
            avancer();
        }

        // ALGORITHME [nom]
        if (verifier(TokenType.ALGORITHME_TOKEN)) {
            avancer(); // ALGORITHME

            if (!verifier(TokenType.ID_TOKEN)) {
                erreurSyntaxique("Nom d'algorithme attendu");
            } else {
                arbreSyntaxique.setValeur(tokenCourant.nom); // Stocker le nom de l'algorithme
                avancer(); // nom de l'algorithme
            }
        } else {
            erreurSyntaxique("'ALGORITHME' attendu");
        }

        // Déclarations
        declarations();

        // DEBUT
        if (!consommer(TokenType.DEBUT_TOKEN)) {
            erreurSyntaxique("'DEBUT' attendu");
        }

        // Instructions
        NoeudAST instructions = blocInstructions();
        if (instructions != null) {
            arbreSyntaxique.ajouterEnfant(instructions);
        }

        // FIN
        if (!consommer(TokenType.FIN_TOKEN)) {
            erreurSyntaxique("'FIN' attendu");
        }
    }

    // Règle: DECLARATIONS ::= (DECL_STRUCTURE | DECL_FONCTION | SECTION_VAR)*
    private void declarations() throws IOException {
        while (verifier(TokenType.STRUCT_TOKEN) ||
                verifier(TokenType.FONCTION_TOKEN) ||
                verifier(TokenType.VAR_TOKEN)) {

            if (verifier(TokenType.STRUCT_TOKEN)) {
                declarationStructure();
            } else if (verifier(TokenType.FONCTION_TOKEN)) {
                declarationFonction();
            } else if (verifier(TokenType.VAR_TOKEN)) {
                sectionVar();
            }
        }
    }

    // Règle: SECTION_VAR ::= VAR (DECL_VARIABLE)+
    private void sectionVar() throws IOException {
        NoeudAST sectionVar = new NoeudAST(NoeudAST.TypeNoeud.SECTION_VAR,
                "", tokenCourant.ligne);
        avancer(); // VAR

        // Lire au moins une déclaration de variable
        boolean auMoinsUneDecl = false;

        do {
            if (verifier(TokenType.ID_TOKEN)) {
                declarationVariableSansVar(sectionVar);
                auMoinsUneDecl = true;

                // Vérifier s'il y a une autre déclaration
                if (!verifier(TokenType.ID_TOKEN)) {
                    break;
                }
            } else {
                if (!auMoinsUneDecl) {
                    erreurSyntaxique("Déclaration de variable attendue après VAR");
                }
                break;
            }
        } while (true);

        arbreSyntaxique.ajouterEnfant(sectionVar);
    }

    // Règle: DECL_VARIABLE ::= LISTE_IDENTIFICATEURS : TYPE ;
    private void declarationVariableSansVar(NoeudAST parent) throws IOException {
        NoeudAST decl = new NoeudAST(NoeudAST.TypeNoeud.DECLARATION_VARIABLE,
                "", tokenCourant.ligne);

        // Liste d'identificateurs
        NoeudAST listeId = listeIdentificateurs();
        decl.ajouterEnfant(listeId);

        if (!consommer(TokenType.DP_TOKEN)) {
            erreurSyntaxique("':' attendu");
        }

        // Type
        NoeudAST type = typeDeclaration();
        if (type != null) {
            decl.ajouterEnfant(type);
        }

        if (!consommer(TokenType.PV_TOKEN)) {
            erreurSyntaxique("';' attendu");
        }

        parent.ajouterEnfant(decl);
    }

    // Règle: DECL_STRUCTURE ::= STRUCTURE IDENTIFICATEUR CHAMPS_STRUCTURE FINSTRUCTURE
    private void declarationStructure() throws IOException {
        NoeudAST structure = new NoeudAST(NoeudAST.TypeNoeud.DECLARATION_STRUCTURE,
                "", tokenCourant.ligne);
        avancer(); // STRUCTURE

        if (!verifier(TokenType.ID_TOKEN)) {
            erreurSyntaxique("Nom de structure attendu");
            return;
        }

        structure.setValeur(tokenCourant.nom);
        avancer();

        // Champs de la structure (sans VAR)
        while (verifier(TokenType.ID_TOKEN)) {
            declarationVariableStructure(structure);
        }

        if (!consommer(TokenType.FINSTRUCT_TOKEN)) {
            erreurSyntaxique("'FINSTRUCTURE' attendu");
        }

        arbreSyntaxique.ajouterEnfant(structure);
    }

    private void declarationVariableStructure(NoeudAST parent) throws IOException {
        NoeudAST decl = new NoeudAST(NoeudAST.TypeNoeud.CHAMP_STRUCTURE,
                "", tokenCourant.ligne);

        // Liste d'identificateurs
        NoeudAST listeId = listeIdentificateurs();
        decl.ajouterEnfant(listeId);

        if (!consommer(TokenType.DP_TOKEN)) {
            erreurSyntaxique("':' attendu");
        }

        // Type
        NoeudAST type = typeDeclaration();
        if (type != null) {
            decl.ajouterEnfant(type);
        }

        if (!consommer(TokenType.PV_TOKEN)) {
            erreurSyntaxique("';' attendu");
        }

        parent.ajouterEnfant(decl);
    }

    // Règle: DECL_FONCTION ::= FONCTION IDENTIFICATEUR ( [PARAMETRES] ) : TYPE
    //                           [SECTION_VAR] DEBUT INSTRUCTIONS RETOUR [EXPRESSION] FINFONCTION
    // Règle: DECL_FONCTION ::= FONCTION IDENTIFICATEUR ( [PARAMETRES] ) : TYPE
//                          [SECTION_VAR] DEBUT INSTRUCTIONS RETOUR [EXPRESSION] FINFONCTION
    private void declarationFonction() throws IOException {
        NoeudAST fonction = new NoeudAST(NoeudAST.TypeNoeud.DECLARATION_FONCTION,
                "", tokenCourant.ligne);
        avancer(); // FONCTION

        if (!verifier(TokenType.ID_TOKEN)) {
            erreurSyntaxique("Nom de fonction attendu");
            return;
        }

        fonction.setValeur(tokenCourant.nom);
        avancer();

        // Paramètres
        if (!consommer(TokenType.PO_TOKEN)) {
            erreurSyntaxique("'(' attendu");
        }

        if (!verifier(TokenType.PF_TOKEN)) {
            NoeudAST parametres = parametresDeclaration();
            fonction.ajouterEnfant(parametres);
        }

        if (!consommer(TokenType.PF_TOKEN)) {
            erreurSyntaxique("')' attendu");
        }

        if (!consommer(TokenType.DP_TOKEN)) {
            erreurSyntaxique("':' attendu");
        }

        // Type de retour
        NoeudAST typeRetour = typeDeclaration();
        if (typeRetour != null) {
            fonction.ajouterEnfant(typeRetour);
        }

        // Section VAR locale (optionnelle) - CORRECTION ICI
        if (verifier(TokenType.VAR_TOKEN)) {
            sectionVarLocale(fonction);
        }

        if (!consommer(TokenType.DEBUT_TOKEN)) {
            erreurSyntaxique("'DEBUT' attendu");
        }

        // Instructions jusqu'à RETOUR
        NoeudAST corps = blocInstructionsFonction();
        if (corps != null) {
            fonction.ajouterEnfant(corps);
        }

        // Vérifier et consommer RETOUR
        if (!consommer(TokenType.RETOUR_TOKEN)) {
            erreurSyntaxique("'RETOUR' attendu dans la fonction");
        } else {
            // Expression de retour
            NoeudAST exprRetour = expression();
            if (exprRetour != null) {
                fonction.ajouterEnfant(exprRetour);
            }
        }

        if (!consommer(TokenType.FINFONCTION_TOKEN)) {
            erreurSyntaxique("'FinFonction' attendu");
        }

        arbreSyntaxique.ajouterEnfant(fonction);
    }

    private NoeudAST blocInstructionsFonction() throws IOException {
        NoeudAST bloc = new NoeudAST(NoeudAST.TypeNoeud.BLOC_INSTRUCTIONS,
                "", tokenCourant.ligne);

        // Lire les instructions jusqu'à RETOUR
        while (!verifier(TokenType.RETOUR_TOKEN) &&
                !verifier(TokenType.FINFONCTION_TOKEN) &&
                !verifier(TokenType.EOF_TOKEN)) {

            NoeudAST instr = instruction();
            if (instr != null) {
                bloc.ajouterEnfant(instr);
            }

            // Consommer le point-virgule si présent
            if (verifier(TokenType.PV_TOKEN)) {
                avancer();
            }

            // Si on tombe sur RETOUR, sortir
            if (verifier(TokenType.RETOUR_TOKEN)) {
                break;
            }
        }

        return bloc.getEnfants().isEmpty() ? null : bloc;
    }

    // SECTION_VAR dans une fonction
    private void sectionVarLocale(NoeudAST parent) throws IOException {
        NoeudAST sectionVar = new NoeudAST(NoeudAST.TypeNoeud.SECTION_VAR,
                "", tokenCourant.ligne);
        avancer(); // VAR

        // Lire au moins une déclaration de variable
        boolean auMoinsUneDecl = false;

        do {
            if (verifier(TokenType.ID_TOKEN)) {
                declarationVariableSansVar(sectionVar);
                auMoinsUneDecl = true;

                // Vérifier s'il y a une autre déclaration
                if (!verifier(TokenType.ID_TOKEN)) {
                    break;
                }
            } else {
                if (!auMoinsUneDecl) {
                    erreurSyntaxique("Déclaration de variable attendue après VAR");
                }
                break;
            }
        } while (true);

        parent.ajouterEnfant(sectionVar);
    }

    // Règle: PARAMETRES ::= PARAMETRE ( , PARAMETRE )*
    private NoeudAST parametresDeclaration() throws IOException {
        NoeudAST listeParams = new NoeudAST(NoeudAST.TypeNoeud.LISTE_PARAMETRES,
                "", tokenCourant.ligne);

        do {
            if (!verifier(TokenType.ID_TOKEN)) {
                erreurSyntaxique("Identificateur de paramètre attendu");
                return listeParams;
            }

            NoeudAST param = new NoeudAST(NoeudAST.TypeNoeud.PARAMETRE,
                    tokenCourant.nom, tokenCourant.ligne);
            avancer();

            if (!consommer(TokenType.DP_TOKEN)) {
                erreurSyntaxique("':' attendu");
            }

            NoeudAST type = typeDeclaration();
            if (type != null) {
                param.ajouterEnfant(type);
            }

            listeParams.ajouterEnfant(param);

            if (!consommer(TokenType.VIR_TOKEN)) {
                break;
            }
        } while (true);

        return listeParams;
    }

    // Règle: LISTE_IDENTIFICATEURS ::= IDENTIFICATEUR ( , IDENTIFICATEUR )*
    private NoeudAST listeIdentificateurs() throws IOException {
        NoeudAST liste = new NoeudAST(NoeudAST.TypeNoeud.LISTE_IDENTIFICATEURS,
                "", tokenCourant.ligne);

        if (!verifier(TokenType.ID_TOKEN)) {
            erreurSyntaxique("Identificateur attendu");
            return liste;
        }

        liste.ajouterEnfant(new NoeudAST(NoeudAST.TypeNoeud.VARIABLE,
                tokenCourant.nom, tokenCourant.ligne));
        avancer();

        while (consommer(TokenType.VIR_TOKEN)) {
            if (!verifier(TokenType.ID_TOKEN)) {
                erreurSyntaxique("Identificateur attendu après ','");
                break;
            }

            liste.ajouterEnfant(new NoeudAST(NoeudAST.TypeNoeud.VARIABLE,
                    tokenCourant.nom, tokenCourant.ligne));
            avancer();
        }

        return liste;
    }

    // Règle: TYPE ::= ENTIER | REEL | CHAINE | BOOLEEN | IDENTIFICATEUR
    private NoeudAST typeDeclaration() throws IOException {
        TokenType typeToken = tokenCourant.code;

        if (typeToken == TokenType.ENTIER_TOKEN ||
                typeToken == TokenType.REEL_TOKEN ||
                typeToken == TokenType.CHAINE_TOKEN ||
                typeToken == TokenType.BOOLEEN_TOKEN ||
                typeToken == TokenType.ID_TOKEN) {

            NoeudAST type = new NoeudAST(NoeudAST.TypeNoeud.TYPE,
                    tokenCourant.nom, tokenCourant.ligne);
            avancer();

            // Vérifier si c'est un tableau (suivi de [nombre])
            if (verifier(TokenType.CO_TOKEN)) {
                avancer(); // [

                // Lire la taille du tableau
                if (verifier(TokenType.NUM_ENTIER_TOKEN)) {
                    type.setValeur(type.getValeur() + "[" + tokenCourant.nom + "]");
                    avancer();
                }

                if (!consommer(TokenType.CF_TOKEN)) {
                    erreurSyntaxique("']' attendu");
                }
            }

            return type;
        }

        erreurSyntaxique("Type attendu (ENTIER, REEL, CHAINE, BOOLEEN ou nom de structure)");
        return null;
    }

    // Règle: INSTRUCTIONS ::= INSTRUCTION ( ; INSTRUCTION )*
    private NoeudAST blocInstructions() throws IOException {
        NoeudAST bloc = new NoeudAST(NoeudAST.TypeNoeud.BLOC_INSTRUCTIONS,
                "", tokenCourant.ligne);

        // Lire les instructions jusqu'à atteindre une fin de bloc
        while (!verifier(TokenType.FIN_TOKEN) &&
                !verifier(TokenType.FINSI_TOKEN) &&
                !verifier(TokenType.FINPOUR_TOKEN) &&
                !verifier(TokenType.FINTANTQUE_TOKEN) &&
                !verifier(TokenType.FINFONCTION_TOKEN) &&
                !verifier(TokenType.SINON_TOKEN) &&
                !verifier(TokenType.RETOUR_TOKEN) &&
                !verifier(TokenType.JUSQUA_TOKEN)) {

            NoeudAST instr = instruction();
            if (instr != null) {
                bloc.ajouterEnfant(instr);
            }

            // Consommer le point-virgule s'il est présent (optionnel après certaines structures)
            consommer(TokenType.PV_TOKEN);
        }

        return bloc;
    }

    // Modifier la méthode instruction() pour gérer RETOUR
    private NoeudAST instruction() throws IOException {
        // Vérifier d'abord si on est à la fin d'un bloc
        if (tokenCourant.code == TokenType.FIN_TOKEN ||
                tokenCourant.code == TokenType.FINSI_TOKEN ||
                tokenCourant.code == TokenType.FINPOUR_TOKEN ||
                tokenCourant.code == TokenType.FINTANTQUE_TOKEN ||
                tokenCourant.code == TokenType.FINFONCTION_TOKEN ||
                tokenCourant.code == TokenType.SINON_TOKEN ||
                tokenCourant.code == TokenType.RETOUR_TOKEN ||
                tokenCourant.code == TokenType.JUSQUA_TOKEN) {
            return null;
        }

        switch (tokenCourant.code) {
            case ID_TOKEN:
                // Peut être affectation ou appel de fonction
                String nom = tokenCourant.nom;
                int ligne = tokenCourant.ligne;
                avancer();

                if (verifier(TokenType.AFF_TOKEN)) {
                    return affectation(nom, ligne);
                } else if (verifier(TokenType.CO_TOKEN)) {
                    return affectationTableau(nom, ligne);
                } else if (verifier(TokenType.PO_TOKEN)) {
                    return appelFonctionInstruction(nom, ligne);
                } else {
                    erreurSyntaxique("'<-' ou '(' attendu après identificateur");
                    return null;
                }

            case SI_TOKEN:
                return condition();

            case POUR_TOKEN:
                return bouclePour();

            case TANTQUE_TOKEN:
                return boucleTantque();

            case REPETER_TOKEN:
                return boucleRepeter();

            case ECRIRE_TOKEN:
                return ecrire();

            case LIRE_TOKEN:
                return lire();

            default:
                erreurSyntaxique("Instruction attendue");
                return null;
        }
    }
    // Ajouter une méthode pour gérer RETOUR
    private NoeudAST retour() throws IOException {
        NoeudAST retour = new NoeudAST(NoeudAST.TypeNoeud.RETOUR,
                "", tokenCourant.ligne);
        avancer(); // RETOUR

        // Expression de retour optionnelle
        if (!verifier(TokenType.PV_TOKEN) &&
                !verifier(TokenType.FINFONCTION_TOKEN)) {
            NoeudAST expr = expression();
            if (expr != null) {
                retour.ajouterEnfant(expr);
            }
        }

        return retour;
    }

    // Règle: AFFECTATION ::= VARIABLE <- EXPRESSION ;
    private NoeudAST affectation(String nomVariable, int ligne) throws IOException {
        NoeudAST affect = new NoeudAST(NoeudAST.TypeNoeud.AFFECTATION,
                nomVariable, ligne);
        avancer(); // <-

        NoeudAST expr = expression();
        if (expr != null) {
            affect.ajouterEnfant(expr);
        }

        return affect;
    }

    private NoeudAST affectationTableau(String nomTableau, int ligne) throws IOException {
        NoeudAST affect = new NoeudAST(NoeudAST.TypeNoeud.AFFECTATION,
                nomTableau, ligne);

        // Accès tableau
        NoeudAST acces = new NoeudAST(NoeudAST.TypeNoeud.ACCES_TABLEAU,
                nomTableau, ligne);
        avancer(); // [

        NoeudAST indice = expression();
        if (indice != null) {
            acces.ajouterEnfant(indice);
        }

        if (!consommer(TokenType.CF_TOKEN)) {
            erreurSyntaxique("']' attendu");
        }

        affect.ajouterEnfant(acces);

        if (!consommer(TokenType.AFF_TOKEN)) {
            erreurSyntaxique("'<-' attendu");
        }

        NoeudAST expr = expression();
        if (expr != null) {
            affect.ajouterEnfant(expr);
        }

        return affect;
    }

    // Règle: CONDITION ::= SI CONDITION_EXPRESSION ALORS INSTRUCTIONS [ SINON INSTRUCTIONS ] FINSI
    private NoeudAST condition() throws IOException {
        NoeudAST cond = new NoeudAST(NoeudAST.TypeNoeud.CONDITION,
                "", tokenCourant.ligne);
        avancer(); // SI

        // Condition expression
        NoeudAST conditionExpr = expression();
        if (conditionExpr != null) {
            cond.ajouterEnfant(conditionExpr);
        }

        if (!consommer(TokenType.ALORS_TOKEN)) {
            erreurSyntaxique("'ALORS' attendu");
        }

        // Instructions du bloc ALORS
        NoeudAST blocAlors = blocInstructions();
        if (blocAlors != null) {
            cond.ajouterEnfant(blocAlors);
        }

        // Bloc SINON optionnel
        if (verifier(TokenType.SINON_TOKEN)) {
            avancer(); // SINON
            NoeudAST blocSinon = blocInstructions();
            if (blocSinon != null) {
                cond.ajouterEnfant(blocSinon);
            }
        }

        if (!consommer(TokenType.FINSI_TOKEN)) {
            erreurSyntaxique("'FINSI' attendu");
        }

        return cond;
    }

    private boolean estOperateurComparaison(TokenType type) {
        return type == TokenType.INF_TOKEN ||
                type == TokenType.INFEG_TOKEN ||
                type == TokenType.SUP_TOKEN ||
                type == TokenType.SUPEG_TOKEN ||
                type == TokenType.EG_TOKEN ||
                type == TokenType.DIFF_TOKEN;
    }

    private boolean estOperateurLogique(TokenType type) {
        return type == TokenType.ET_TOKEN ||
                type == TokenType.OU_TOKEN;
    }

    // Règle: BOUCLE_POUR ::= POUR IDENTIFICATEUR <- EXPRESSION JUSQUA EXPRESSION
    //                        FAIRE INSTRUCTIONS FINPOUR
    private NoeudAST bouclePour() throws IOException {
        NoeudAST boucle = new NoeudAST(NoeudAST.TypeNoeud.BOUCLE_POUR,
                "", tokenCourant.ligne);
        avancer(); // POUR

        if (!verifier(TokenType.ID_TOKEN)) {
            erreurSyntaxique("Variable de boucle attendue");
            return null;
        }

        boucle.setValeur(tokenCourant.nom);
        avancer();

        if (!consommer(TokenType.AFF_TOKEN)) {
            erreurSyntaxique("'<-' attendu");
        }

        // Expression de début
        NoeudAST debut = expression();
        if (debut != null) {
            boucle.ajouterEnfant(debut);
        }

        if (!consommer(TokenType.JUSQUA_TOKEN)) {
            erreurSyntaxique("'JUSQUA' attendu");
        }

        // Expression de fin
        NoeudAST fin = expression();
        if (fin != null) {
            boucle.ajouterEnfant(fin);
        }

        if (!consommer(TokenType.FAIRE_TOKEN)) {
            erreurSyntaxique("'FAIRE' attendu");
        }

        // Instructions
        NoeudAST corps = blocInstructions();
        if (corps != null) {
            boucle.ajouterEnfant(corps);
        }

        if (!consommer(TokenType.FINPOUR_TOKEN)) {
            erreurSyntaxique("'FINPOUR' attendu");
        }

        return boucle;
    }

    // Règle: BOUCLE_TANTQUE ::= TANTQUE CONDITION_EXPRESSION FAIRE INSTRUCTIONS FINTANTQUE
    private NoeudAST boucleTantque() throws IOException {
        NoeudAST boucle = new NoeudAST(NoeudAST.TypeNoeud.BOUCLE_TANTQUE,
                "", tokenCourant.ligne);
        avancer(); // TANTQUE

        // Condition expression
        NoeudAST condition = expression();
        if (condition != null) {
            boucle.ajouterEnfant(condition);
        }

        if (!consommer(TokenType.FAIRE_TOKEN)) {
            erreurSyntaxique("'FAIRE' attendu");
        }

        // Instructions
        NoeudAST corps = blocInstructions();
        if (corps != null) {
            boucle.ajouterEnfant(corps);
        }

        if (!consommer(TokenType.FINTANTQUE_TOKEN)) {
            erreurSyntaxique("'FINTANTQUE' attendu");
        }

        return boucle;
    }

    // Règle: BOUCLE_REPETER ::= REPETER INSTRUCTIONS JUSQUA EXPRESSION
    private NoeudAST boucleRepeter() throws IOException {
        NoeudAST boucle = new NoeudAST(NoeudAST.TypeNoeud.BOUCLE_REPETER,
                "", tokenCourant.ligne);
        avancer(); // REPETER

        // Instructions
        NoeudAST corps = blocInstructions();
        if (corps != null) {
            boucle.ajouterEnfant(corps);
        }

        if (!consommer(TokenType.JUSQUA_TOKEN)) {
            erreurSyntaxique("'JUSQUA' attendu");
        }

        // Condition expression
        NoeudAST condition = expression();
        if (condition != null) {
            boucle.ajouterEnfant(condition);
        }

        return boucle;
    }

    // Règle: ECRIRE ::= ECRIRE EXPRESSION ( , EXPRESSION )* ;
    private NoeudAST ecrire() throws IOException {
        NoeudAST ecrire = new NoeudAST(NoeudAST.TypeNoeud.ECRIRE,
                "", tokenCourant.ligne);
        avancer(); // ECRIRE

        // Expression
        NoeudAST expr = expression();
        if (expr != null) {
            ecrire.ajouterEnfant(expr);
        }

        while (consommer(TokenType.VIR_TOKEN)) {
            expr = expression();
            if (expr != null) {
                ecrire.ajouterEnfant(expr);
            }
        }

        return ecrire;
    }

    // Règle: LIRE ::= LIRE IDENTIFICATEUR ( , IDENTIFICATEUR )* ;
    private NoeudAST lire() throws IOException {
        NoeudAST lire = new NoeudAST(NoeudAST.TypeNoeud.LIRE,
                "", tokenCourant.ligne);
        avancer(); // LIRE

        if (!verifier(TokenType.ID_TOKEN)) {
            erreurSyntaxique("Variable attendue");
            return null;
        }

        lire.ajouterEnfant(new NoeudAST(NoeudAST.TypeNoeud.VARIABLE,
                tokenCourant.nom, tokenCourant.ligne));
        avancer();

        while (consommer(TokenType.VIR_TOKEN)) {
            if (!verifier(TokenType.ID_TOKEN)) {
                erreurSyntaxique("Variable attendue");
                break;
            }

            lire.ajouterEnfant(new NoeudAST(NoeudAST.TypeNoeud.VARIABLE,
                    tokenCourant.nom, tokenCourant.ligne));
            avancer();
        }

        return lire;
    }

    private NoeudAST appelFonctionInstruction(String nomFonction, int ligne) throws IOException {
        NoeudAST appel = new NoeudAST(NoeudAST.TypeNoeud.APPEL_FONCTION,
                nomFonction, ligne);

        avancer(); // (

        // Arguments optionnels
        if (!verifier(TokenType.PF_TOKEN)) {
            NoeudAST arguments = argumentsAppel();
            if (arguments != null) {
                appel.ajouterEnfant(arguments);
            }
        }

        if (!consommer(TokenType.PF_TOKEN)) {
            erreurSyntaxique("')' attendu");
        }

        return appel;
    }

    private NoeudAST argumentsAppel() throws IOException {
        NoeudAST listeArgs = new NoeudAST(NoeudAST.TypeNoeud.LISTE_ARGUMENTS,
                "", tokenCourant.ligne);

        NoeudAST expr = expression();
        if (expr != null) {
            listeArgs.ajouterEnfant(expr);
        }

        while (consommer(TokenType.VIR_TOKEN)) {
            expr = expression();
            if (expr != null) {
                listeArgs.ajouterEnfant(expr);
            }
        }

        return listeArgs;
    }

    // NOUVELLES MÉTHODES D'EXPRESSION
    // EXPRESSION ::= EXPRESSION_BOOL
    private NoeudAST expression() throws IOException {
        return expressionBool();
    }

    // EXPRESSION_BOOL ::= EXPRESSION_COMP ( ( ET | OU ) EXPRESSION_COMP )*
    private NoeudAST expressionBool() throws IOException {
        NoeudAST gauche = expressionComp();

        while (verifier(TokenType.ET_TOKEN) || verifier(TokenType.OU_TOKEN)) {
            String operateur = tokenCourant.nom;
            avancer();

            NoeudAST droite = expressionComp();

            NoeudAST operation = new NoeudAST(NoeudAST.TypeNoeud.EXPRESSION_BINAIRE,
                    operateur, tokenCourant.ligne);
            operation.ajouterEnfant(gauche);
            operation.ajouterEnfant(droite);
            gauche = operation;
        }

        return gauche;
    }

    // EXPRESSION_COMP ::= EXPRESSION_ARITH ( OP_COMPARAISON EXPRESSION_ARITH )*
    private NoeudAST expressionComp() throws IOException {
        NoeudAST gauche = expressionArith();

        while (estOperateurComparaison(tokenCourant.code)) {
            String operateur = tokenCourant.nom;
            avancer();

            NoeudAST droite = expressionArith();

            NoeudAST operation = new NoeudAST(NoeudAST.TypeNoeud.EXPRESSION_BINAIRE,
                    operateur, tokenCourant.ligne);
            operation.ajouterEnfant(gauche);
            operation.ajouterEnfant(droite);
            gauche = operation;
        }

        return gauche;
    }

    // EXPRESSION_ARITH ::= TERME ( ( + | - ) TERME )*
    private NoeudAST expressionArith() throws IOException {
        NoeudAST gauche = terme();

        while (verifier(TokenType.PLUS_TOKEN) || verifier(TokenType.MOINS_TOKEN)) {
            String operateur = tokenCourant.nom;
            avancer();

            NoeudAST droite = terme();

            NoeudAST operation = new NoeudAST(NoeudAST.TypeNoeud.EXPRESSION_BINAIRE,
                    operateur, tokenCourant.ligne);
            operation.ajouterEnfant(gauche);
            operation.ajouterEnfant(droite);
            gauche = operation;
        }
